[lworld] C1 hits "Can not patch access to flat field" assert after JDK-8320437

XMLWordPrintable

      Assert observed in various runtime/valhalla/inlinetypes/* tests in tier4. Example:

      - runtime/valhalla/inlinetypes/TestInheritedInlineTypeFields.java
      - Additional flags: -Xcomp -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:+TieredCompilation

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S18605/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c00b451b-1873-407e-a6cf-606763dd6d66/runs/19b076e5-af56-472f-9b77-287a7e8cd673/workspace/open/src/hotspot/share/c1/c1_Runtime1.cpp:1101), pid=295205, tid=295346
      # assert(!result.is_flat()) failed: Can not patch access to flat field
      #
      # JRE version: Java(TM) SE Runtime Environment (22.0+1) (fastdebug build 22-valhalla+1-34)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 22-valhalla+1-34, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x836598] Runtime1::patch_code(JavaThread*, Runtime1::StubID)+0x2258
      .........
      Command Line: -Dtest.vm.opts=-XX:MaxRAMPercentage=4.16667 -Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/20/36/bundles/linux-x64/jdk-20_linux-x64_bin.tar.gz/jdk-20 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/tmp -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=4.16667 -J-Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/20/36/bundles/linux-x64/jdk-20_linux-x64_bin.tar.gz/jdk-20 -J-Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/tmp -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:+TieredCompilation -Dtest.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/linux-x64-debug.jdk/jdk-22/fastdebug -Dcompile.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/linux-x64-debug.jdk/jdk-22/fastdebug -Dtest.timeout.factor=10.0 -Dtest.nativepath=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/linux-x64-debug.test/hotspot/jtreg/native -Dtest.root=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/src.full/open/test/hotspot/jtreg -Dtest.name=runtime/valhalla/inlinetypes/AnnotationsTests.java -Dtest.file=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/src.full/open/test/hotspot/jtreg/runtime/valhalla/inlinetypes/AnnotationsTests.java -Dtest.src=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/src.full/open/test/hotspot/jtreg/runtime/valhalla/inlinetypes -Dtest.src.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/src.full/open/test/hotspot/jtreg/runtime/valhalla/inlinetypes:/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/src.full/open/test/lib -Dtest.classes=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/classes/0/runtime/valhalla/inlinetypes/AnnotationsTests.d -Dtest.class.path=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/classes/0/runtime/valhalla/inlinetypes/AnnotationsTests.d:/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/classes/0/test/lib -Dtest.class.path.prefix=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/classes/0/runtime/valhalla/inlinetypes/AnnotationsTests.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/src.full/open/test/hotspot/jtreg/runtime/valhalla/inlinetypes:/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/classes/0/test/lib -Dtest.modules=java.base/jdk.internal.misc --add-modules=java.base --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -XX:MaxRAMPercentage=4.16667 -Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/20/36/bundles/linux-x64/jdk-20_linux-x64_bin.tar.gz/jdk-20 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/tmp -Xcomp -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+TieredCompilation -Djava.library.path=/opt/mach5/mesos/work_dir/jib-master/install/jdk-22-valhalla+1-34/linux-x64-debug.test/hotspot/jtreg/native --add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED -XX:+EnableValhalla com.sun.javatest.regtest.agent.MainWrapper /opt/mach5/mesos/work_dir/slaves/0db9c48f-6638-40d0-9a4b-bd9cc7533eb8-S9982/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f3ade275-2573-4d2e-8a4c-3e5f859d7980/runs/f4fd6ce7-6567-46de-8126-749eb0ac0c1c/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/runtime/valhalla/inlinetypes/AnnotationsTests.d/main.0.jta
      .........
      Stack: [0x00007fb40fbfd000,0x00007fb40fcfd000], sp=0x00007fb40fcf86c0, free space=1005k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x836598] Runtime1::patch_code(JavaThread*, Runtime1::StubID)+0x2258 (c1_Runtime1.cpp:1101)
      V [libjvm.so+0x836737] Runtime1::access_field_patching(JavaThread*)+0x37 (c1_Runtime1.cpp:1571)
      v ~RuntimeStub::access_field_patching Runtime1 stub 0x00007fb430049ec4
      J 5995 c1 AnnotationsTests.test_9()V (43 bytes) @ 0x00007fb429918db1 [0x00007fb429918940+0x0000000000000471]
      J 5930 c2 java.lang.invoke.LambdaForm$DMH+0x00007fb3cf004800.invokeVirtual(Ljava/lang/Object;Ljava/lang/Object;)V java.base@22-valhalla (14 bytes) @ 0x00007fb430d7b844 [0x00007fb430d7b800+0x0000000000000044]
      J 5929 c2 java.lang.invoke.LambdaForm$MH+0x00007fb3cf005000.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (36 bytes) @ 0x00007fb430d7b150 [0x00007fb430d7b040+0x0000000000000110]
      J 2686 c2 java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (23 bytes) @ 0x00007fb4309259ac [0x00007fb430925920+0x000000000000008c]
      J 5765 c2 jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (92 bytes) @ 0x00007fb430d3363c [0x00007fb430d33560+0x00000000000000dc]
      J 5610 c1 AnnotationsTests.main([Ljava/lang/String;)V (105 bytes) @ 0x00007fb4297f55b4 [0x00007fb4297f4ae0+0x0000000000000ad4]
      J 5634 c1 java.lang.invoke.LambdaForm$DMH+0x00007fb3cf003000.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V java.base@22-valhalla (14 bytes) @ 0x00007fb42980e3fc [0x00007fb42980e040+0x00000000000003bc]
      J 5763 c1 java.lang.invoke.LambdaForm$MH+0x00007fb3cf004400.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (38 bytes) @ 0x00007fb42986ce4c [0x00007fb42986c8a0+0x00000000000005ac]
      J 5766 c1 java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (24 bytes) @ 0x00007fb4298725dc [0x00007fb429871ee0+0x00000000000006fc]
      J 5764 c1 jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (92 bytes) @ 0x00007fb42986ee6c [0x00007fb42986d980+0x00000000000014ec]
      J 3324 c2 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (108 bytes) @ 0x00007fb430a20e6c [0x00007fb430a20d40+0x000000000000012c]
      J 5523 c1 com.sun.javatest.regtest.agent.MainWrapper$MainTask.run()V (438 bytes) @ 0x00007fb4297cc23c [0x00007fb4297cad00+0x000000000000153c]
      J 3124 c2 java.lang.Thread.run()V java.base@22-valhalla (23 bytes) @ 0x00007fb4309daa04 [0x00007fb4309da960+0x00000000000000a4]
      v ~StubRoutines::call_stub 0x00007fb430017d21
      V [libjvm.so+0xec495f] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x5bf (javaCalls.cpp:443)
      V [libjvm.so+0xec5111] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x331 (javaCalls.cpp:345)
      V [libjvm.so+0xec5325] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x75 (javaCalls.cpp:194)
      V [libjvm.so+0x10180b6] thread_entry(JavaThread*, JavaThread*)+0xb6 (jvm.cpp:3035)
      V [libjvm.so+0xefa49c] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:721)
      V [libjvm.so+0x1809dfa] Thread::call_run()+0xba (thread.cpp:220)
      V [libjvm.so+0x14efeda] thread_native_entry(Thread*)+0x12a (os_linux.cpp:785)
      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~RuntimeStub::access_field_patching Runtime1 stub 0x00007fb430049ec4
      J 5995 c1 AnnotationsTests.test_9()V (43 bytes) @ 0x00007fb429918db1 [0x00007fb429918940+0x0000000000000471]
      J 5930 c2 java.lang.invoke.LambdaForm$DMH+0x00007fb3cf004800.invokeVirtual(Ljava/lang/Object;Ljava/lang/Object;)V java.base@22-valhalla (14 bytes) @ 0x00007fb430d7b844 [0x00007fb430d7b800+0x0000000000000044]
      J 5929 c2 java.lang.invoke.LambdaForm$MH+0x00007fb3cf005000.invoke(Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (36 bytes) @ 0x00007fb430d7b150 [0x00007fb430d7b040+0x0000000000000110]
      J 2686 c2 java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (23 bytes) @ 0x00007fb4309259ac [0x00007fb430925920+0x000000000000008c]
      J 5765 c2 jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (92 bytes) @ 0x00007fb430d3363c [0x00007fb430d33560+0x00000000000000dc]
      J 5610 c1 AnnotationsTests.main([Ljava/lang/String;)V (105 bytes) @ 0x00007fb4297f55b4 [0x00007fb4297f4ae0+0x0000000000000ad4]
      J 5634 c1 java.lang.invoke.LambdaForm$DMH+0x00007fb3cf003000.invokeStatic(Ljava/lang/Object;Ljava/lang/Object;)V java.base@22-valhalla (14 bytes) @ 0x00007fb42980e3fc [0x00007fb42980e040+0x00000000000003bc]
      J 5763 c1 java.lang.invoke.LambdaForm$MH+0x00007fb3cf004400.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (38 bytes) @ 0x00007fb42986ce4c [0x00007fb42986c8a0+0x00000000000005ac]
      J 5766 c1 java.lang.invoke.Invokers$Holder.invokeExact_MT(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (24 bytes) @ 0x00007fb4298725dc [0x00007fb429871ee0+0x00000000000006fc]
      J 5764 c1 jdk.internal.reflect.DirectMethodHandleAccessor.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (92 bytes) @ 0x00007fb42986ee6c [0x00007fb42986d980+0x00000000000014ec]
      J 3324 c2 java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object; java.base@22-valhalla (108 bytes) @ 0x00007fb430a20e6c [0x00007fb430a20d40+0x000000000000012c]
      J 5523 c1 com.sun.javatest.regtest.agent.MainWrapper$MainTask.run()V (438 bytes) @ 0x00007fb4297cc23c [0x00007fb4297cad00+0x000000000000153c]
      J 3124 c2 java.lang.Thread.run()V java.base@22-valhalla (23 bytes) @ 0x00007fb4309daa04 [0x00007fb4309da960+0x00000000000000a4]
      v ~StubRoutines::call_stub 0x00007fb430017d21

            Assignee:
            Tobias Hartmann
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: