8324117: [lworld] C1 hits "Can not patch access to flat field" assert after JDK-8320437